--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -167,14 +167,14 @@ gs.sig.pop.h<-round(pop_sigma_gs[1,3],2)
 
 \section{Abstract}
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
-The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. Most models of carbon storage assume that earlier seasons will result in longer seasons and thereby enhance forest carbon storage, however current findings have challenged this assumption.
+The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. Most models of carbon storage assume that earlier growth will result in longer seasons and thereby enhance forest carbon storage, however current findings have challenged this assumption.
 
 A recent hypothesis that has gained support in the literature is that plants dynamically adjust the end of their growing season based on their carbon-sink capacity, such that longer seasons do not increase total productivity. If this is the case, variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth), which should remain relatively stable across years. % emwJuly22: I really like this but we need to mirror the language below for the readers. Right now a reader cannot follow how the 'unexpected trade-off' relates to this. We probably need to move and change the language below of 'This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity.' 
 We tested this prediction using rarely available plant-scale phenological measurements from a three year common garden experiment. The garden included 18 woody species, native to the Eastern United States from four populations of origin. 
 
-We found an unexpected trade-off between early calendar growing seasons and thermal growing seasons in which delayed leafout in calendar time resulted in a longer thermal growing season---a relationship that was strongest in early-leafing species. At the community level, earlier leafout was correlated with earlier budset, resulting in a relatively stable calendar growing period over the three years. 
-% emwJuly22: If we keep the below sentence we need to spell it out more easily for readers. 
-Earlier leafout may have little advantage to the thermal growing season because early lower temperature are less favorable for photosynthesis, and the correlation between leafout and budset suggest early individuals will miss out on later-season conditions more favorable for photosynthesis. This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity. This study shows linking phenological growing seasons to carbon storage requires integrating existing ecosystem measures with phenological variation at multiple scales, and that progress will require more efforts to understand and model species-level shifts in phenology.
+We found that at the community level, earlier leafout was correlated with earlier budset, resulting in a relatively stable calendar growing period over the three years.  Because thermal conditions were lower at the start than end of the season,  the relationship between earlier leafout and budset resulted in shorter thermal growing seasons when leafout was early---a relationship that was strongest in early-leafing species. 
+
+This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity---if early leaf out results in earlier budset, as a whole plant are active for a proportionately large period of time where thermal conditions are less thermally optimal for photosynthesis. This study shows linking phenological growing seasons to carbon storage requires integrating existing ecosystem measures with phenological variation at multiple scales, and that progress will require more efforts to understand and model species-level shifts in phenology.
 
 \section{Introduction}
 %cjcJan6 - Added tweaks to the first line but I don't know a lot of great info for the other sentences here
@@ -195,7 +195,7 @@ Such population-level studies, however, are based on a very limited number of sp
 Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts \citep{Morales-Castilla2024} and land surface models \citep{ma2022}. Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
 % Theory suggesting this is driven by different plant strategies in response to abiotic and biotic environmental pressures (CITES), and also predicts that they should vary strongly in end-of-season events ...
 
-%emwNov8 -- I don't love the focus on variation ... we do get into species level variation but am not sure we want to ask this as the major question so I rewrote it, but left old text for now. 
+
 Here, we examine how start-of-season events, using leafout, may affect end-of-season events, using budset, to determine the length of the growing season.
 % In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. 
 Using rarely available plant-scale data---phenological observations over three years from a multi-species common garden study---we test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. % emwJuly22: last two sentences here need some flow help.
@@ -205,23 +205,28 @@ Using rarely available plant-scale data---phenological observations over three y
 
 %emwDec15:  If we need it -- CITES here could be our NCC paper this year (Nacho 2024) and/or Deirdre's paper specifically estimates year to year variability, but I would be happy for less self-citing if we have other equally good refs
 % emwJuly22: If it's possible to say our results are consistent given leafdrop or leaf color data, that would be great, but I think those data were too variable, right? 
-Our multi-species common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with the high number of studies that have found species and year-to-year environmental variation drive leafout variation \citep{delpierre2024, donnelly2017, polgar2011}, we found high variance in leafout timing among species and years ($\sigma_{species}$:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], $\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana}, the last species to leaf out (Figure \ref{fig:vapar}a). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}b). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
+Our multi-species common garden captured high variation in leafout, budset and leaf coloration, allowing us to examine how these phases correlate, but also providing important insights into how both vary across species, populations and years. Consistent with the high number of studies that have found species and year-to-year environmental variation drive leafout variation \citep{delpierre2024, donnelly2017, polgar2011}, we found high variance in leafout timing among species and years ($\sigma_{species}$:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], $\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana}, the last species to leaf out (Figure \ref{fig:vapar}a). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}b). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). 
 
-Spring phenological phases are reported to be more plastic than autumn ones \citep{mckown2014, aitken2016, vico2021}, but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$:\Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], $\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], $\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends in leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}a).
 
-%emwNov8: Can we put this 3 day number (below paragraph) in context compared to year to year variation? Also, why the grant? Also, we need to test FFD. 
+Spring phenological phases are reported to be more plastic than autumn ones \citep{mckown2014, aitken2016, vico2021}, but we found that, relative to leafout, variance in budset and leaf coloration timing was higher for species, years and populations ($\sigma_{species}$:\Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], $\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], $\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Leaf coloration was earliest for \emph{Myrica gale} and latest for \emph{Alnus incana}. Following trends in leafout and our finding that earlier leafout correlates with earlier budset and leaf coloration, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}a).
+
+
 % emwJuly22: We were supposed to add some climatic information on the four sites and test FFD (frost free days). We should add that to supp and also refer to the sites other than their names (like, 'the site with fewest FFD' or such). Ditto for Weld Hill where mentioned. 
-These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years \citep{soolanayakanahally2013timing}, (and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the White Mountains, but these differences were weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one genus (\emph{Populus}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role \citep{Michelson2018}.   
+These results are somewhat surprising as autumn phenological phases like budset and leaf coloration are commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger these phases and leading to relatively stable phase dates across years \citep{soolanayakanahally2013timing}, (and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset and their leaf coloration. Populations from the Second College Grant (the site with the fewest frost free days) set buds approximately two days before those from the White Mountains, but these differences were weak (Figure \ref{fig:vapar}b) and small. Leaf coloration for populations from the Second College Grant occurred about three days before populations from the White Mountains and four days before populations from St. Hippolyte and Harvard Forest, qualitatively following an expected cline of frost free days (ADD SUPPLIMENTAL FIGURE), though as with budset, these trends were weak and small.
+Our results suggest we need much more work on additional species, as results to date have focused mainly on one genus (\emph{Populus}) and more efforts to understand how environmental factors beyond photoperiod may affect budset and senescence. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role \citep{Michelson2018}.   
 
-% OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
-%emwNov8: I did not update this paragraph much. 
-High variation across species in both their leafout and budset timing lead to species driving the most variation in  growing season length  ($\sigma_{species}$:\Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}], with less variation among years ($\sigma_{year}$:\Sexpr{gs.sig.yr}, $UI_{95}$[\Sexpr{gs.sig.yr.l},\Sexpr{gs.sig.yr.h}], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:\Sexpr{gs.sig.pop}, $UI_{95}$[\Sexpr{gs.sig.pop.l},\Sexpr{gs.sig.pop.h}], Figure \ref{fig:vapar}). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with the Second College Grant populations marginally earliest and White Mountains latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
-%emwNov8: Could finalize text a bit more but must-do before submitting to make sure all the numbers are correct in Rnw.
-%emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
-%dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
-\subsection{Comparing calendar to thermal growing seasons: why longer calendar seasons may result in increased primary productivity}
+Budset and leaf coloration phenology were generally correlated (put coefficient in here), but we observed notable species-level variation. For example species like \emph{Sambucus racemosa}, \emph{Spirea tomentosa} were amount the lastest to set but had earlier leaf coloration relative the the rest of the community. Other species like \emph{Betula populifolia} and \emph{Alnus incana} had both later budset and leaf coloration relative to the community. These differences may reflect
+
+
+High variation across species in their leafout, budset, and coloration timing lead to species driving the most variation in both primary and full growing season length  ($\sigma_{species}$:\Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}], with less variation among years ($\sigma_{year}$:\Sexpr{gs.sig.yr}, $UI_{95}$[\Sexpr{gs.sig.yr.l},\Sexpr{gs.sig.yr.h}], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:\Sexpr{gs.sig.pop}, $UI_{95}$[\Sexpr{gs.sig.pop.l},\Sexpr{gs.sig.pop.h}], Figure \ref{fig:vapar}). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar primary growing season of the species in our study, while \emph{Spirea alba} had the longest full growing season due to early leafout and late leaf coloration. \emph{A. canadensis} and \emph{S. americana} had the shortest primart growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). \emph{Myrica gale} had the shortest full growing season due to early leaf coloration despite it's average leafout timing. Population level differences in calendar primary growing season were determined by differences in budset, and followed the same pattern with the Second College Grant populations marginally earliest and White Mountains latest, with high uncertainty. (Figure \ref{fig:vapar}b). Population level differences in calendar full growing season were determined by differences in leaf coloration, and followed the same pattern  frost free day cline the Second College Grant populations marginally earliest and St. Hippolyte and Harvard Forest latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
+
+
+\subsection{Comparing calendar to thermal growing seasons: why longer calendar seasons may not result in increased primary productivity}
 
 % emwJuly22: Do you want to make the below nums Sexpr? 
+
+
+
 Across all species, populations and years, later start of spring (i.e., leafout) in calendar time was associated with shorter growing seasons (mean estimated effect: $-0.44, UI_{95}[-0.73, -0.16]$). This trade-off in earlier leafout and shorter calendar-time growing season was apparent in all species in our common garden, but to vary degrees (Fig: \ref{fig:thermcal}a,b). When we controlled for species and population level differences, however, we found earlier leafout led to earlier budset (Pearson's correlation coefficient of \Sexpr{corrr} $CI_{95}$[\Sexpr{corrr.low}, \Sexpr{corrr.high}]), resulting in a relatively stable calendar growing season \ref{fig:vapar}c). % emwJuly22: Can we spell out what we mean here? Add a sentence at the end? 
 
 In contrast, we found an apparently fundamental---and unexpected trade-off---between early, longer calender growing seasons and thermal growing seasons. Across species, populations and years, later leafout in calendar time resulted in a longer thermal growing season (mean estimated effect: $5.49, UI_{95}[1.54, 9.23]$; Figure \ref{fig:thermcal}c). These contrasting results---of a relatively stable growing season measured in calendar days at the community scale, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. % emwJuly22: this last sentence is great! I would make sure it or something like it ends up in the abstract/cover letter. 
