Paused mid-progress the other day, pushing for now.

--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -28,7 +28,7 @@
 %\usepackage{xr}
 \externaldocument{supple}
 
-\title{Phenological differences among species explain why early leafout extends the calendar but not thermal growing season}
+\title{Early leafout leads to longer cooler season growing seasons for woody species} % Phenological differences among species explain why early leafout extends the calendar but not thermal growing season
 %dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be confusing to a reader unfamiliar with the concept
 
 \author{D.M. Buonaiuto $^{1,2,3}$, C.J. Chamberlain $^{2,3,4}$,
@@ -180,9 +180,14 @@ We found that at the community level, earlier leafout was correlated with earlie
 This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity---if early leaf out results in earlier budset, as a whole plant are active for a proportionately large period of time where thermal conditions are less thermally optimal for photosynthesis. This study shows linking phenological growing seasons to carbon storage requires integrating existing ecosystem measures with phenological variation at multiple scales, and that progress will require more efforts to understand and model species-level shifts in phenology.
 
 \section{Introduction}
-Terrestrial forests currently sequester 20\% of greenhouse gas emissions annually  \citep{shanley2024, roe2021}, providing a significant mitigation pathway for climate change. In mid and high latitudes, net carbon uptake is primarily determined by the length of the growing season \citep{White1999}. Most models of carbon storage assume that earlier spring leafout with climate change will drive longer seasons and increased carbon storage, in part offsetting future warming \citep{Churkina2005,White1999,Keenan2014}. Current findings, however, have called this major assumption into question. Recent research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}.
+Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions annually  \citep{shanley2024, roe2021}. Most models of climate change assume this storage may increase as warming drives longer seasons, more tree growth and, thus, more carbon storage, following decades of evidence from ecosystem-scale studies \citep{Churkina2005,White1999,Keenan2014}. Recent findings, however,  have called this assumption into question. Observational studies of individual adult trees have failed to find a connection between tree growth and warming \citep{camarero2022decoupled,dow2022warm,silvestro2023longer}, while experiments on juvenile trees have suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}.
 
-These emerging results suggest fundamental gaps in our understanding of how early-season events, and the growing conditions of the vegetative period, shape end-of-season events. Some of this uncertainty is undoubtedly related to how the start and end of the season is measured, and the scale of observation. Many studies that did not support the link between growing season extension and increased productivity have used either large-scale satellite measurements or small-scale single species `pot' experiments. These results contrast with findings from long-term large-scale $CO_2$ enrichment studies \citep{norby2021comment}. For satellite-derived metrics of phenology (e.g., using NDVI),  the signature that is measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely, if ever, have good measures of start and end of season events together in natural communities. While small scale pot experiments are better for capturing these plant-level measurements, results to date generally cannot differentiate between different species. Further, because end-of-season events are often more locally adapted than start-of-season events---with plants using unique photoperiods to cue important events such as budset \citep{bauerle2012photoperiodic,soolanayakanahally2013timing}---these trends may vary across populations \citep{aitken2016}.
+% START HERE!
+These results suggest fundamental gaps in our understanding of how early-season events and the environmental conditions of the vegetative period shape end-of-season events. This discrepancy could be related to  differences in the scale of observation, which also affects how the start and end of the season are measured \citep[][]{Korner2023,grephon2025}. Many findings of a correlation between season length and growth have focused on ecosystem-scale estimates of productivity \citep{chen1999effects,Keenan2014,norby2021comment} and the start and end of season, where the signatures that are measured scale across individuals. In contrast, recent findings of a disconnect have come often from observations of individual trees on one or a few species, though not always with good measures of start and end of season events together in natural communities and instead relying on climate or modeled phenology \citep[e.g.,][]{Zani2020,dow2022warm}. Results to date thus schmear across different scales, measurements of a growing season and additionally species and populations. While research has repeatedly acknowledged that trends may vary across species (CITES), because end-of-season events are often more locally adapted than start-of-season events---with plants using unique photoperiods to cue growth cessation \citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}---these trends additionally may vary across populations \citep{aitken2016}.
+
+
+
+% While small scale pot experiments are better for capturing these plant-level measurements, results to date generally cannot differentiate between different species.
 
 Additional uncertainty may stem from the fact that there are multiple ways to measure the growing season \citep{Korner2023}. The most common is calendar time (i.e., the number of days between the start and end of the growing season). Some studies have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but several recent studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}. %DMB Sept42025 this might now be redundant with previous paragraph
 
