--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Daniel Buonaiuto at 2025-07-11 11:21:01 -0400 
+%% Created for Elizabeth M Wolkovich at 2025-10-05 15:02:32 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{grephon2025,
+	author = {Wolkovich, E. M. and Ettinger, Ailene K. and Chin, A. and Chamberlain, Catherine J. and Baumgarten, F. and Pradhan, K. and Manzanedo, R. D. Hille Ris Lambers, J. },
+	date-added = {2025-10-05 15:00:45 -0700},
+	date-modified = {2025-10-05 15:02:32 -0700},
+	journal = {Nature Climate Change},
+	title = {Why longer seasons with climate change may not increase tree growth},
+	year = {{\emph{in press}}}}
+
+@article{van2025summer,
+	author = {Van der Meersch, Victor and Wolkovich, EM},
+	date-added = {2025-10-05 15:00:42 -0700},
+	date-modified = {2025-10-05 15:00:42 -0700},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {23},
+	pages = {e2506796122},
+	publisher = {National Academy of Sciences},
+	title = {Summer solstice optimizes the thermal growing season},
+	volume = {122},
+	year = {2025}}
 
 @article{Farquhar:1980vm,
 	abstract = {Various aspects of the biochemistry of photosynthetic carbon assimilation in C3 plants are integrated into a form compatible with studies of gas exchange in leaves. These aspects include the kinetic properties of ribulose bisphosphate carboxylase-oxygenase; the requirements of the photosynthetic carbon reduction and photorespiratory carbon oxidation cycles for reduced pyridine nucleotides; the dependence of electron transport on photon flux and the presence of a temperature dependent upper limit to electron transport. The measurements of gas exchange with which the model outputs may be compared include those of the temperature and partial pressure of CO2(p(CO2)) dependencies of quantum yield, the variation of compensation point with temperature and partial pressure of O2(p(O2)), the dependence of net CO2 assimilation rate on p(CO2) and irradiance, and the influence of p(CO2) and irradiance on the temperature dependence of assimilation rate.},
