More progress (a lot), but still not done

--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,15 +1,103 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Elizabeth M Wolkovich at 2025-10-05 15:02:32 -0700 
+%% Created for Elizabeth M Wolkovich at 2025-10-08 18:00:33 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{cuny2012life,
+	author = {Cuny, Henri E and Rathgeber, Cyrille BK and Lebourgeois, Fran{\c{c}}ois and Fortin, Mathieu and Fournier, Meriem},
+	date-added = {2025-10-08 18:00:28 -0700},
+	date-modified = {2025-10-08 18:00:28 -0700},
+	journal = {Tree physiology},
+	number = {5},
+	pages = {612--625},
+	publisher = {Oxford University Press},
+	title = {Life strategies in intra-annual dynamics of wood formation: example of three conifer species in a temperate forest in north-east France},
+	volume = {32},
+	year = {2012}}
+
+@article{michelot2012comparing,
+	author = {Michelot, Alice and Simard, Sonia and Rathgeber, Cyrille and Dufr{\^e}ne, Eric and Damesin, Claire},
+	date-added = {2025-10-08 17:59:52 -0700},
+	date-modified = {2025-10-08 17:59:52 -0700},
+	journal = {Tree physiology},
+	number = {8},
+	pages = {1033--1045},
+	publisher = {Oxford University Press},
+	title = {{Comparing the intra-annual wood formation of three European species (\emph{Fagus sylvatica, Quercus petraea and Pinus sylvestris}) as related to leaf phenology and non-structural carbohydrate dynamics}},
+	volume = {32},
+	year = {2012}}
+
+@book{ipcc2022,
+	author = {P{\"o}rtner, H. O. and Roberts, D. C. and Tignor, M. and Poloczanska, E. S. and Mintenbeck, K. and Alegr{\'\i}a, A. and Craig, M. and Langsdorf, S. and L{\"o}schke, S. and M{\"o}ller, V. and Okem, A. and Rama, B.},
+	date-added = {2025-10-08 17:15:08 -0700},
+	date-modified = {2025-10-08 17:15:08 -0700},
+	publisher = {Cambridge University Press},
+	title = {Climate Change 2022: Impacts, Adaptation and Vulnerability. Contribution of Working Group II to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+	year = {2022}}
+
+@book{ipcc2021,
+	address = {New York, NY},
+	author = {Canadell, J.G. and Monteiro, P.M.S. and Costa, M.H. and Cotrim da Cunha, L. and Cox, P.M. and Eliseev, A.V. and Henson, S. and Ishii, M. and Jaccard, S. and Koven, C. and Lohila, A. and Patra, P.K. and Piao, S. and Rogelj, J. and Syampungani, S. and Zaehle, S. and Zickfeld, K.},
+	date-added = {2025-10-08 17:14:56 -0700},
+	date-modified = {2025-10-08 17:14:56 -0700},
+	editor = {Masson-Delmotte, V. and Zhai, P. and Pirani, A. and Connors, S.L. and P{\'e}an, C. and Berger, S. and Caud, N. and Chen, Y. and Goldfarb, L. and Gomis, M.I. and Huang, M. and Leitzell, K. and Lonnoy, E. and Matthews, J.B.R. and Maycock, T.K. and Waterfield, T. and Yelek{\c c}i, O. and Yu, R. and Zhou, B.},
+	publisher = {Cambridge University Press},
+	title = {Climate Change 2021: The Physical Science Basis. Contribution of Working Group I to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+	year = {2021}}
+
+@article{phenophylo,
+	author = {Davies, T. J. and Wolkovich, E. M. and Kraft, N. J. B. and Salamin, N. and Allen, J. M. and Ault, T. R. and Betancourt, J. L. and Bolmgren, K. and Cleland, E. E. and Cook, B. I. and Crimmins, T. M. and Mazer, S. J. and McCabe, G. J. and Pau, S. and Regetz, J. and Schwartz, M. D. and Travers, S. E.},
+	date-added = {2025-10-08 16:54:15 -0700},
+	date-modified = {2025-10-08 16:54:15 -0700},
+	journal = {Journal of Ecology},
+	month = {November},
+	number = {6},
+	pages = {1520--1530},
+	title = {Phylogenetic conservatism in plant phenology},
+	volume = {101},
+	year = {2013}}
+
+@article{Pettorelli:2005ns,
+	author = {Pettorelli, N. and Vik, J. O. and Mysterud, A. and Gaillard, J. M. and Tucker, C. J. and Stenseth, N. C.},
+	date-added = {2025-10-08 16:51:49 -0700},
+	date-modified = {2025-10-08 16:51:49 -0700},
+	journal = {Trends in Ecology \& Evolution},
+	number = {9},
+	pages = {503-510},
+	title = {Using the satellite-derived NDVI to assess ecological responses to environmental change},
+	volume = {20},
+	year = {2005}}
+
+@article{zweifel2021trees,
+	author = {Zweifel, Roman and Sterck, Frank and Braun, Sabine and Buchmann, Nina and Eugster, Werner and Gessler, Arthur and H{\"a}ni, Matthias and Peters, Richard L and Walthert, Lorenz and Wilhelm, Micah and others},
+	date-added = {2025-10-08 13:53:06 -0700},
+	date-modified = {2025-10-08 13:53:06 -0700},
+	journal = {New Phytologist},
+	number = {6},
+	pages = {2174--2185},
+	publisher = {Wiley Online Library},
+	title = {Why trees grow at night},
+	volume = {231},
+	year = {2021}}
+
+@article{Grime:1977sw,
+	author = {Grime, J. P.},
+	date-added = {2025-10-08 13:52:44 -0700},
+	date-modified = {2025-10-08 13:52:44 -0700},
+	journal = {American Naturalist},
+	number = {982},
+	pages = {1169-1194},
+	title = {Evidence for Existence of 3 Primary Strategies in Plants and Its Relevance to Ecological and Evolutionary Theory},
+	volume = {111},
+	year = {1977}}
+
 @article{grephon2025,
-	author = {Wolkovich, E. M. and Ettinger, Ailene K. and Chin, A. and Chamberlain, Catherine J. and Baumgarten, F. and Pradhan, K. and Manzanedo, R. D. Hille Ris Lambers, J. },
+	author = {Wolkovich, E. M. and Ettinger, Ailene K. and Chin, A. and Chamberlain, Catherine J. and Baumgarten, F. and Pradhan, K. and Manzanedo, R. D. Hille Ris Lambers, J.},
 	date-added = {2025-10-05 15:00:45 -0700},
 	date-modified = {2025-10-05 15:02:32 -0700},
 	journal = {Nature Climate Change},
